--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "goit-react-hw-02",
+  "name": "sip-happens-cafe-feedback",
   "private": true,
   "version": "0.0.0",
   "type": "module",
